Muchas modificaciones. Se comienza con AutoMapper.

--- a/NuevaAgendaApi/appsettings.json
+++ b/NuevaAgendaApi/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "AgendaAPIDBConnectionString": "Data Source=ConsultaAlumno.db"
+  },
+  
+    "Jwt": {
+      "Issuer": "WebApiJwt.com",
+      "Audience": "localhost",
+      "Key": "S3cr3t_K3y!.123_S3cr3t_K3y!.123"
+    }
   }
-}
