Location ,controller, repository, interface

--- a/NuevaAgendaApi/appsettings.json
+++ b/NuevaAgendaApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AgendaAPIDBConnectionString": "Data Source=ConsultaAlumno.db"
+    "AgendaAPIDBConnectionString": "Data Source=Agenda.db"
   },
   
     "Jwt": {
