--- a/NuevaAgendaApi/appsettings.json
+++ b/NuevaAgendaApi/appsettings.json
@@ -6,13 +6,34 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "AgendaAPIDBConnectionString": "Data Source=Agenda.db"
+  "Authentication": {
+    "SecretForKey": "S3cr3t_K3y!.123_S3cr3t_K3y!.123", //"thisisthesecretforgeneratingakey(mustbeatleast32bitlong)"
+    "Issuer": "https://localhost:7075", //Esto refiere a quién creó el token, en este caso la aplicación en localhost
+    "Audience": "nuevaagendaapi" //Esto refiere a quién está dirigido el token, es decir, se define para quién se supone que estamos creando este token. Acá se puede elegir cualquier string que quieran.
   },
-  
-    "Jwt": {
-      "Issuer": "WebApiJwt.com",
-      "Audience": "localhost",
-      "Key": "S3cr3t_K3y!.123_S3cr3t_K3y!.123"
-    }
+  "ConnectionStrings": {
+    "AgendaAPIDBConnectionString": "Data Source=ConsultaAlumnos.db"
   }
+}
+
+
+//{
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft.AspNetCore": "Warning"
+//    }
+//  },
+//  "AllowedHosts": "*",
+//  "ConnectionStrings": {
+//    "AgendaAPIDBConnectionString": "Data Source=Agenda.db"
+//  },
+
+//  "Jwt": {
+//    "Issuer": "WebApiJwt.com",
+//    "Audience": "localhost",
+//    "Key": "S3cr3t_K3y!.123_S3cr3t_K3y!.123"
+//  }
+//}
+
+  
